[package]
name = "bft-lib"
version = "0.1.0"
description = "Common interfaces and simulation tools for BFT consensus protocols such as LibraBFT"
repository = "https://github.com/novifinancial/librabft_simulator"
authors = ["Mathieu Baudet <mathieubaudet@fb.com>", "Alberto Sonnino <asonnino@fb.com>"]
license = "Apache-2.0"
publish = false
edition = "2018"

[features]
simulator = []

[dependencies]
env_logger = "0.8.1"
anyhow = "1.0"
log = "0.4.6"
rand = { version = "0.8.3" }
rand_core = "0.6.0"
rand_distr = "0.4.0"
rand_xoshiro = "0.6.0"
clap = "2.33"
csv = "1.1"
bcs = "0.1.2"
serde = { version = "1.0", features = ["derive"] }
serde-name = "0.1.1"
futures = { version = "0.3.14", features = ["executor"] }
