[package]
name = "librabft-v2"
version = "0.1.0"
description = "Executable specifications for the LibraBFTv2 protocol"
repository = "https://github.com/novifinancial/librabft_simulator"
authors = ["Mathieu Baudet <mathieubaudet@fb.com>", "Alberto Sonnino <asonnino@fb.com>"]
license = "Apache-2.0"
publish = false
edition = "2018"

[features]
simulator = ["bft-lib/simulator"]

[dependencies]
env_logger = "0.8.1"
anyhow = "1.0"
log = "0.4.6"
rand = "0.8.3"
clap = "2.33.3"
csv = "1.1"
futures = "0.3.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

bft-lib = { path = "../bft-lib" }

[[bin]]
name = "librabft_simulator"
required-features = ["simulator"]
path = "src/main.rs"
test = true
